fix wrapping issue in club headerline markers

--- a/app/assets/stylesheets/pages/p-clubs/show.sass
+++ b/app/assets/stylesheets/pages/p-clubs/show.sass
@@ -10,7 +10,6 @@
       color: $red
       cursor: default
       font-size: 13px
-      margin-left: 6px
 
     .censored
       color: $purple
